Task 'aemCheckout' works initially

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile "org.apache.felix:org.apache.felix.scr.generator:1.16.0"
     compile "org.apache.felix:org.apache.felix.scr.ant:1.16.0"
     compile 'org.dm.gradle:gradle-bundle-plugin:0.10.0'
+    compile 'org.apache.jackrabbit.vault:org.apache.jackrabbit.vault:3.1.26'
+    compile 'org.apache.jackrabbit.vault:vault-cli:3.1.6'
 
     // SCR runtime dependencies
 
