--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 plugins {
     id 'java-gradle-plugin'
     id 'maven-publish'
-    id 'ivy-publish'
     id "org.jetbrains.kotlin.jvm" version "1.1.1"
+    id "com.jfrog.bintray" version "1.7.3"
 }
 
 group 'com.cognifide.gradle'
 version '1.0.0'
+description = 'Gradle AEM Plugin'
 
 repositories {
     mavenCentral()
@@ -46,12 +47,29 @@ gradlePlugin {
 }
 
 publishing {
-    repositories {
-        maven {
-            url "../consuming/maven-repo"
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
         }
-        ivy {
-            url "../consuming/ivy-repo"
+    }
+}
+
+bintray {
+    user = project.property('bintrayUser') ?: System.getenv('BINTRAY_USER')
+    key = project.property('bintrayKey') ?: System.getenv('BINTRAY_KEY')
+    publications = ['mavenJava']
+    pkg {
+        repo = 'maven-public'
+        name = 'gradle-aem-plugin'
+        userOrg = 'cognifide'
+        licenses = ['Apache-2.0']
+        vcsUrl = 'https://github.com/Cognifide/gradle-aem-plugin.git'
+        labels = ['aem', 'cq', 'vault', 'scr']
+        publicDownloadNumbers = true
+        version {
+            name = project.version
+            desc = "${project.description} ${project.version}"
+            vcsTag = project.version
         }
     }
 }
