--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.cognifide.gradle'
-version '1.0.1-SNAPSHOT'
+version '1.0.1'
 description = 'Gradle AEM Plugin'
 
 repositories {
