--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.cognifide.gradle'
-version '1.1.1'
+version '1.1.2-SNAPSHOT'
 description = 'Gradle AEM Plugin'
 defaultTasks = ['clean', 'publishToMavenLocal']
 
@@ -64,4 +64,5 @@ bintray {
             vcsTag = project.version
         }
     }
+    publish = true
 }
