New task 'aemVault' introduced

--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.cognifide.gradle'
-version '1.3.1'
+version '1.3.2-SNAPSHOT'
 description = 'Gradle AEM Plugin'
 defaultTasks = ['clean', 'publishToMavenLocal']
 
@@ -26,8 +26,7 @@ dependencies {
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.8'
     compile 'org.reflections:reflections:0.9.11'
     compile 'org.dm.gradle:gradle-bundle-plugin:0.10.0'
-    compile 'org.apache.jackrabbit.vault:org.apache.jackrabbit.vault:3.1.26'
-    compile 'org.apache.jackrabbit.vault:vault-cli:3.1.6'
+    compile 'org.apache.jackrabbit.vault:vault-cli:3.1.38'
     compile 'org.jsoup:jsoup:1.10.3'
 }
 
