--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,13 @@ plugins {
 }
 
 group 'com.cognifide.gradle'
-version '1.4.3-SNAPSHOT'
+version '1.5.0-SNAPSHOT'
 description = 'Gradle AEM Plugin'
 defaultTasks = ['clean', 'publishToMavenLocal']
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -22,12 +23,13 @@ dependencies {
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-io:commons-io:2.4'
     compile 'commons-httpclient:commons-httpclient:3.1'
-    compile group: 'commons-validator', name: 'commons-validator', version: '1.6'
+    compile 'commons-validator:commons-validator:1.6'
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.8'
     compile 'org.reflections:reflections:0.9.11'
     compile 'org.dm.gradle:gradle-bundle-plugin:0.10.0'
     compile 'org.apache.jackrabbit.vault:vault-cli:3.1.24'
     compile 'org.jsoup:jsoup:1.10.3'
+    compile 'org.samba.jcifs:jcifs:1.3.18-kohsuke-1'
 }
 
 gradlePlugin {
