--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'org.apache.jackrabbit.vault:vault-cli:3.1.24'
     compile 'org.jsoup:jsoup:1.10.3'
     compile 'org.samba.jcifs:jcifs:1.3.18-kohsuke-1'
+    compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.11'
 }
 
 gradlePlugin {
