--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,17 @@ dependencies {
 
 gradlePlugin {
     plugins {
-        aem {
-            id = "com.cognifide.aem"
-            implementationClass = "com.cognifide.gradle.aem.AemPlugin"
+        base {
+            id = "com.cognifide.aem.base"
+            implementationClass = "com.cognifide.gradle.aem.AemBasePlugin"
+        }
+        pkg {
+            id = "com.cognifide.aem.package"
+            implementationClass = "com.cognifide.gradle.aem.AemPackagePlugin"
+        }
+        instance {
+            id = "com.cognifide.aem.instance"
+            implementationClass = "com.cognifide.gradle.aem.AemInstancePlugin"
         }
     }
 }
