--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     compile 'org.jsoup:jsoup:1.10.3'
     compile 'org.samba.jcifs:jcifs:1.3.18-kohsuke-1'
     compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.11'
+    compile group: 'com.jcraft', name: 'jsch', version: '0.1.54'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
 }
 
 gradlePlugin {
