--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'java-gradle-plugin'
     id 'maven-publish'
-    id "org.jetbrains.kotlin.jvm" version "1.1.3"
+    id "org.jetbrains.kotlin.jvm" version "1.1.4"
     id "com.jfrog.bintray" version "1.7.3"
 }
 
 group 'com.cognifide.gradle'
-version '2.0.0-beta'
+version '2.0.0-SNAPSHOT'
 description = 'Gradle AEM Plugin'
 defaultTasks = ['clean', 'publishToMavenLocal']
 
@@ -19,7 +19,7 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:1.1.3"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:1.1.4"
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-io:commons-io:2.4'
     compile 'commons-httpclient:commons-httpclient:3.1'
@@ -34,6 +34,9 @@ dependencies {
     compile group: 'com.hierynomus', name: 'sshj', version: '0.21.1'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     compile group: 'org.osgi', name: 'org.osgi.core', version: '6.0.0'
+
+    testCompile gradleTestKit()
+    testCompile 'junit:junit:4.12'
 }
 
 gradlePlugin {
