--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenLocal()
         mavenCentral()
         maven { url  "http://dl.bintray.com/cognifide/maven-public" }
     }
 
     dependencies {
-        classpath 'com.cognifide.gradle:aem-plugin:2.0.0-beta'
+        classpath 'com.cognifide.gradle:aem-plugin:2.0.0-SNAPSHOT'
     }
 }
 
