Integration tests uses published to mvn local instead of problematic runner.withPluginClasspath

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ publishing {
     }
 }
 
+test.dependsOn publishToMavenLocal
+check.dependsOn publishToMavenLocal
+
 bintray {
     user = project.properties.get('bintrayUser') ?: System.getenv('BINTRAY_USER')
     key = project.properties.get('bintrayKey') ?: System.getenv('BINTRAY_KEY')
