--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/gradle/buildscript.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/gradle/buildscript.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    classpath 'com.cognifide.gradle:aem-plugin:2.0.7'
+    classpath 'com.cognifide.gradle:aem-plugin:2.0.8-SNAPSHOT'
     classpath "org.dm.gradle:gradle-bundle-plugin:0.10.0"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.4"
 }
