--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.cognifide.gradle:aem-plugin:2.0.10-SNAPSHOT'
+        classpath 'com.cognifide.gradle:aem-plugin:2.0.10'
         classpath 'org.dm.gradle:gradle-bundle-plugin:0.10.0'
     }
 }
