--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/build.gradle
@@ -6,8 +6,8 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.cognifide.gradle:aem-plugin:2.0.17'
-        classpath 'org.dm.gradle:gradle-bundle-plugin:0.10.0'
+        classpath 'com.cognifide.gradle:aem-plugin:2.0.18'
+        classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:3.5.0'
     }
 }
 
@@ -15,9 +15,9 @@ group = 'com.company.aem'
 version = '1.0.0-SNAPSHOT'
 description = 'Example'
 
-apply plugin: 'com.cognifide.aem.package'
 apply plugin: 'java'
-apply plugin: 'org.dm.bundle'
+apply plugin: 'biz.aQute.bnd.builder'
+apply plugin: 'com.cognifide.aem.package'
 
 repositories {
     mavenLocal()
@@ -31,8 +31,12 @@ dependencies {
     compile group: 'org.osgi', name: 'osgi.cmpn', version: '6.0.0'
 }
 
-bundle {
-    instruction 'Bundle-Name', description
-    instruction 'Bundle-Category', 'example'
-    instruction 'Bundle-Vendor', 'Company'
+jar {
+    manifest {
+        attributes([
+                'Bundle-Name': description,
+                'Bundle-Category': 'example',
+                'Bundle-Vendor': 'Company'
+        ])
+    }
 }
