--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/common/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/common/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 }
 
 description = 'Example - Common'
-defaultTasks = ['aemBuild']
+defaultTasks = [':aemDeploy']
 
 apply plugin: 'java'
 apply plugin: "kotlin"
