--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/design/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/design/build.gradle
@@ -3,6 +3,6 @@ buildscript {
 }
 
 description = 'Example - Design'
-defaultTasks = ['aemBuild']
+defaultTasks = [':aemDeploy']
 
 apply plugin: 'com.cognifide.aem.package'
