--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,10 @@ dependencies {
     compile 'commons-validator:commons-validator:1.6'
     compile 'com.fasterxml.jackson.module:jackson-module-kotlin:2.8.8'
     compile 'org.reflections:reflections:0.9.9'
-    compile 'org.dm.gradle:gradle-bundle-plugin:0.10.0'
     compile 'org.apache.jackrabbit.vault:vault-cli:3.1.24'
     compile 'org.jsoup:jsoup:1.10.3'
     compile 'org.samba.jcifs:jcifs:1.3.18-kohsuke-1'
+    compile 'biz.aQute.bnd:biz.aQute.bnd.gradle:3.5.0'
     compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.11'
     compile group: 'com.hierynomus', name: 'sshj', version: '0.21.1'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.4'
@@ -48,6 +48,10 @@ gradlePlugin {
         pkg {
             id = "com.cognifide.aem.package"
             implementationClass = "com.cognifide.gradle.aem.pkg.PackagePlugin"
+        }
+        bundle {
+            id = "com.cognifide.aem.bundle"
+            implementationClass = "com.cognifide.gradle.aem.bundle.BundlePlugin"
         }
         instance {
             id = "com.cognifide.aem.instance"
