--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/core/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/core/build.gradle
@@ -5,10 +5,8 @@ buildscript {
 description = 'Example - Core'
 defaultTasks = ['aemDeploy']
 
-apply plugin: 'java'
+apply plugin: 'com.cognifide.aem.bundle'
 apply plugin: "kotlin"
-apply plugin: 'biz.aQute.bnd.builder'
-apply plugin: 'com.cognifide.aem.package'
 
 jar {
     manifest {
