--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,9 @@ plugins {
 }
 
 group 'com.cognifide.gradle'
-version '3.0.0'
+version '3.0.1-SNAPSHOT'
 description = 'Gradle AEM Plugin'
-defaultTasks = ['clean', 'build', 'publishToMavenLocal']
+defaultTasks = ['clean', 'publishToMavenLocal']
 
 repositories {
     jcenter()
