--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.cognifide.gradle:aem-plugin:3.0.4-SNAPSHOT'
+        classpath 'com.cognifide.gradle:aem-plugin:3.0.4'
     }
 }
 
