--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.cognifide.gradle:aem-plugin:3.0.5'
+        classpath 'com.cognifide.gradle:aem-plugin:3.0.6-SNAPSHOT'
         classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:3.5.0'
     }
 }
