Unit test for aemDebug JSON comparison, almost done

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     testCompile gradleTestKit()
     testCompile 'junit:junit:4.12'
+    testCompile  'org.skyscreamer:jsonassert:1.5.0'
 }
 
 gradlePlugin {
