Test output on Travis CI

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,13 @@ publishing {
     }
 }
 
+test {
+    testLogging {
+        events "failed"
+        exceptionFormat "short"
+    }
+}
+
 test.dependsOn publishToMavenLocal
 check.dependsOn publishToMavenLocal
 
