--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:1.2.21"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:1.2.30"
     compile 'org.jetbrains.kotlin:kotlin-reflect:1.2.21'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'commons-io:commons-io:2.4'
@@ -29,12 +29,13 @@ dependencies {
     compile 'org.jsoup:jsoup:1.10.3'
     compile 'org.samba.jcifs:jcifs:1.3.18-kohsuke-1'
     compile 'biz.aQute.bnd:biz.aQute.bnd.gradle:3.5.0'
-    compile group: 'org.zeroturnaround', name: 'zt-zip', version: '1.11'
-    compile group: 'com.hierynomus', name: 'sshj', version: '0.21.1'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.4'
-    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.4'
-    compile group: 'org.osgi', name: 'org.osgi.core', version: '6.0.0'
-    compile group: 'com.mitchellbosecke', name: 'pebble', version: '2.4.0'
+    compile 'org.zeroturnaround:zt-zip:1.11'
+    compile 'com.hierynomus:sshj:0.21.1'
+    compile 'org.apache.httpcomponents:httpclient:4.5.4'
+    compile 'org.apache.httpcomponents:httpmime:4.5.4'
+    compile 'org.osgi:org.osgi.core:6.0.0'
+    compile 'com.mitchellbosecke:pebble:2.4.0'
+
 
     testCompile gradleTestKit()
     testCompile 'junit:junit:4.12'
