--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
@@ -1,2 +1,2 @@
-aem.instance.author.httpUrl=http://192.168.0.1:4502
-aem.instance.publish.httpUrl=http://192.168.0.1:4503
+aem.instance.remote.local-author.httpUrl=http://192.168.0.1:4502
+aem.instance.remote.local-publish.httpUrl=http://192.168.0.1:4503
