--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
@@ -1,2 +1,9 @@
-aem.instance.remote.local-author.httpUrl=http://192.168.0.1:4502
-aem.instance.remote.local-publish.httpUrl=http://192.168.0.1:4503
+aem.instance.local.local-author.httpUrl=http://localhost:4502
+aem.instance.local.local-author.runModes=nosamplecontent,mongo
+aem.instance.local.local-author.jvmOpts="-server", "-Xmx2048m", "-XX:MaxPermSize=512M", "-Djava.awt.headless=true"
+aem.instance.local.local-author.debugPort=24502
+aem.instance.local.local-publish1.httpUrl=http://localhost:4503
+aem.instance.local.local-publish2.httpUrl=http://localhost:4504
+
+aem.instance.remote.test-author.httpUrl=http://192.168.6.6:4502
+aem.instance.remote.test-publish.httpUrl=http://192.168.6.6:4503
