--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
@@ -1,6 +1,6 @@
 aem.instance.local.local-author.httpUrl=http://localhost:4502
 aem.instance.local.local-author.runModes=nosamplecontent,mongo
-aem.instance.local.local-author.jvmOpts="-server", "-Xmx2048m", "-XX:MaxPermSize=512M", "-Djava.awt.headless=true"
+aem.instance.local.local-author.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true
 aem.instance.local.local-author.debugPort=24502
 aem.instance.local.local-publish1.httpUrl=http://localhost:4503
 aem.instance.local.local-publish2.httpUrl=http://localhost:4504
