RCP task works, bundle plugin / BND tool error reporting

--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/common/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/common/build.gradle
@@ -17,12 +17,7 @@ aem {
     config {
         bundlePackage = "com.company.aem.example.common"
     }
-}
-
-jar {
-    manifest {
-        attributes([
-                'Export-Package': "org.hashids.*"
-        ])
+    bundle {
+        exportPackage "org.hashids"
     }
 }
