--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/build.gradle
@@ -1,21 +1,10 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenLocal()
-        maven { url "http://dl.bintray.com/cognifide/maven-public" }
-    }
-
-    dependencies {
-        classpath 'com.cognifide.gradle:aem-plugin:4.0.0'
-        classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:3.5.0'
-    }
+plugins {
+    id 'com.cognifide.aem.bundle'
 }
 
 group = 'com.company.aem'
 version = '1.0.0-SNAPSHOT'
 description = 'Example'
-
-apply plugin: 'com.cognifide.aem.bundle'
 
 repositories {
     mavenLocal()
