--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.cognifide.gradle:aem-plugin:4.0.0-beta3'
+        classpath 'com.cognifide.gradle:aem-plugin:4.0.0'
     }
 }
 
