--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
-install: ./gradlew clean publishToMavenLocal -i -S
+install: ./gradlew clean publishToMavenLocal -x test -i -S
 script: ./gradlew check -i -S
