--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/gradle/buildscript.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/assembly/gradle/buildscript.gradle
@@ -3,6 +3,7 @@ repositories {
     jcenter()
     maven { url "http://dl.bintray.com/cognifide/maven-public" }
     maven { url "https://plugins.gradle.org/m2/" }
+    maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
 }
 
 dependencies {
