--- a/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/settings.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/compose/bundle-and-content/settings.gradle
@@ -4,6 +4,7 @@ pluginManagement {
 	repositories {
 		mavenLocal()
 		jcenter()
+		maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
 	}
 	resolutionStrategy {
 		eachPlugin {
