--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/build.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         jcenter()
         mavenLocal()
         maven { url "http://dl.bintray.com/cognifide/maven-public" }
+        maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
     }
 
     dependencies {
