--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/minimal/settings.gradle
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/minimal/settings.gradle
@@ -3,6 +3,7 @@ pluginManagement {
         jcenter()
         mavenLocal()
         maven { url "http://dl.bintray.com/cognifide/maven-public" }
+        maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
     }
 }
 
