Memory tunings for CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ cache:
   directories:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
-env:
-  global:
-  - GRADLE_OPTS="-Xms128m"
+#env:
+#  global:
+#  - GRADLE_OPTS="-Xms128m"
