Fork plugin alignment (selectable 'type')

--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
@@ -1,11 +1,16 @@
-aem.instance.local.local-author.httpUrl=http://localhost:4502
-aem.instance.local.local-author.runModes=nosamplecontent,mongo
-aem.instance.local.local-author.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true
-aem.instance.local.local-author.debugPort=24502
-aem.instance.local.local-publish1.httpUrl=http://localhost:4503
-aem.instance.local.local-publish2.httpUrl=http://localhost:4504
+aem.instance.local-author.httpUrl=http://localhost:4502
+aem.instance.local-author.type=local
+aem.instance.local-author.runModes=nosamplecontent,mongo
+aem.instance.local-author.jvmOpts=-server -Xmx2048m -XX:MaxPermSize=512M -Djava.awt.headless=true
+aem.instance.local-author.debugPort=24502
 
-aem.instance.remote.test-author.httpUrl=http://192.168.6.6:4502
-aem.instance.remote.test-author.externalUrl=http://test-author.local
-aem.instance.remote.test-publish.httpUrl=http://192.168.6.6:4503
-aem.instance.remote.test-publish.externalUrl=http://test-publish.local
+aem.instance.local-publish1.httpUrl=http://localhost:4503
+aem.instance.local-publish1.type=local
+
+aem.instance.local-publish2.httpUrl=http://localhost:4504
+aem.instance.local-publish2.type=local
+
+aem.instance.test-author.httpUrl=http://192.168.6.6:4502
+aem.instance.test-author.externalUrl=http://test-author.local
+aem.instance.test-publish.httpUrl=http://192.168.6.6:4503
+aem.instance.test-publish.externalUrl=http://test-publish.local
