Tailer less verbose by default

--- a/dists/gradle-aem-tailer/gradle.properties
+++ b/dists/gradle-aem-tailer/gradle.properties
@@ -2,7 +2,7 @@ aem.notificationEnabled=true
 
 aem.tail.logFilePath=/logs/error.log
 aem.tail.incidentFilterPath=incidentFilter.txt
-aem.tail.incidentLevels=[ERROR,WARN]
+aem.tail.incidentLevels=[ERROR]
 aem.tail.incidentDelay=5000
 
 aem.instance.local-author.httpUrl=http://localhost:4502
