--- a/dists/gradle-aem-tailer/gradle.properties
+++ b/dists/gradle-aem-tailer/gradle.properties
@@ -1,5 +1,3 @@
-aem.notificationEnabled=true
-
 aem.tail.logFilePath=/logs/error.log
 aem.tail.incidentFilterPath=incidentFilter.txt
 aem.tail.incidentLevels=[ERROR]
@@ -10,3 +8,6 @@ aem.instance.local-publish.httpUrl=http://localhost:4503
 
 #aem.instance.int-author.httpUrl=http://x.x.x.x:4502
 #aem.instance.int-publish.httpUrl=http://y.y.y.y:4503
+
+aem.notificationEnabled=true
+#aem.zoneId=UTC
