--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
@@ -1,3 +1,5 @@
+aem.zoneId=UTC
+
 aem.instance.local-author.httpUrl=http://localhost:4502
 aem.instance.local-author.type=local
 aem.instance.local-author.runModes=nosamplecontent,mongo
