--- a/dists/gradle-aem-tailer/gradle.properties
+++ b/dists/gradle-aem-tailer/gradle.properties
@@ -7,7 +7,12 @@ aem.instance.local-author.httpUrl=http://localhost:4502
 aem.instance.local-publish.httpUrl=http://localhost:4503
 
 #aem.instance.int-author.httpUrl=http://x.x.x.x:4502
+#aem.instance.int-author.user=admin
+#aem.instance.int-author.password=
+
 #aem.instance.int-publish.httpUrl=http://y.y.y.y:4503
+#aem.instance.int-publish.user=admin
+#aem.instance.int-publish.password=
 
 aem.notificationEnabled=true
 #aem.zoneId=UTC
