--- a/dists/gradle-aem-tailer/gradle.properties
+++ b/dists/gradle-aem-tailer/gradle.properties
@@ -1,3 +1,7 @@
+aem.instance.name=*
+aem.notificationEnabled=true
+#aem.zoneId=UTC
+
 aem.tail.logFilePath=/logs/error.log
 aem.tail.incidentFilterPath=incidentFilter.txt
 aem.tail.incidentLevels=[ERROR]
@@ -13,6 +17,3 @@ aem.instance.local-publish.httpUrl=http://localhost:4503
 #aem.instance.int-publish.httpUrl=http://y.y.y.y:4503
 #aem.instance.int-publish.user=admin
 #aem.instance.int-publish.password=
-
-aem.notificationEnabled=true
-#aem.zoneId=UTC
