#78 removing additional dispatcher logs directory

--- a/src/main/resources/com/cognifide/gradle/aem/environment/docker-compose.yml
+++ b/src/main/resources/com/cognifide/gradle/aem/environment/docker-compose.yml
@@ -13,7 +13,6 @@ services:
     volumes:
       - "./dispatcher/conf:/etc/httpd/conf"
       - "./build/cache:/opt/aem/dispatcher/cache"
-      - "./build/logs/dispatcher:/opt/aem/dispatcher/logs"
-      - "./build/logs/apache:/var/log/httpd"
+      - "./build/logs:/var/log/httpd"
 networks:
   docker-net:
