#355 unifying httpd reloading experience - when httpd configuration is broken on start developer gets meaningful information

--- a/src/main/resources/com/cognifide/gradle/aem/environment/docker-compose.yml
+++ b/src/main/resources/com/cognifide/gradle/aem/environment/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3"
 services:
   dispatcher:
     image: httpd:2.4.39
+    command: ["tail", "-f", "--retry", "/usr/local/apache2/logs/error_log"]
     deploy:
       replicas: 1
       restart_policy:
