#355 refactoring - still envUp and envDown needs fixing - after removing httpd start from container start they need to be reworked

--- a/src/main/resources/com/cognifide/gradle/aem/environment/docker-compose.yml
+++ b/src/main/resources/com/cognifide/gradle/aem/environment/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3"
 services:
-  dispatcher:
+  httpd:
     image: httpd:2.4.39
     command: ["tail", "-f", "--retry", "/usr/local/apache2/logs/error_log"]
     deploy:
