--- a/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
+++ b/src/test/resources/com/cognifide/gradle/aem/test/debug/additional/gradle.properties
@@ -1,4 +1,5 @@
 zoneId=UTC
+environment.docker.type=DESKTOP
 
 instance.local-author.httpUrl=http://localhost:4502
 instance.local-author.type=local
